--- a/Moduo1/Client/MainWindow.xaml
+++ b/Moduo1/Client/MainWindow.xaml
@@ -5,8 +5,143 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Client"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+        Title="MainWindow" Height="600" Width="850">
     <Grid>
-        
+        <TabControl HorizontalAlignment="Left" Height="569" VerticalAlignment="Top" Width="842" Background="#FFEFFBFB">
+            <TabItem Height="0">
+                <Grid Background="#FFEFFBFB">
+                    <Label x:Name="usernameLabel" Content="Username:" Height="37" Width="137" Margin="246,263,447,256"/>
+                    <Label x:Name="passwordLabel" Content="Password:" Height="37" Width="137" Margin="246,221,447,298"/>
+                    <TextBox x:Name="usernameBox" HorizontalAlignment="Left" Height="25" Margin="388,221,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="163"/>
+                    <PasswordBox x:Name="passwordBox" HorizontalAlignment="Left" Height="25" Margin="388,263,0,0" VerticalAlignment="Top" Width="163"/>
+                    <Button x:Name="logInButton" Content="Sign In" Height="37" Width="86" Margin="349,316,395,203" Click="logInButton_Click" Background="#FFD4DBDE" FontWeight="Bold"/>
+                </Grid>
+            </TabItem>
+            <TabItem Height="0" Focusable="True">
+                <Grid Background="#FFEFFBFB">
+                    <TabControl x:Name="tabControl1" Margin="10,73,10,20" Focusable="True">
+                        <TabItem Header="Home" Margin="-2,10,-21,-10" Height="39" Focusable="True">
+                            <Grid Background="#FFF7F7F7" Margin="0,16,0,0" Focusable="True">
+                                <Label Content="Name:" HorizontalAlignment="Left" Margin="10,62,0,0" VerticalAlignment="Top" Width="142" FontSize="14"/>
+                                <Label Content="Surname:" HorizontalAlignment="Left" Margin="10,137,0,0" VerticalAlignment="Top" Width="142" FontSize="14"/>
+                                <Label Content="Email:" HorizontalAlignment="Left" Margin="10,212,0,0" VerticalAlignment="Top" Width="142" FontSize="14"/>
+                                <Label Content="Position in company:" HorizontalAlignment="Left" Margin="10,288,0,0" VerticalAlignment="Top" Width="142" FontSize="14"/>
+                                <Label x:Name="homeLabel1" Content="" HorizontalAlignment="Left" Margin="170,64,0,0" VerticalAlignment="Top" Width="142" FontSize="14" HorizontalContentAlignment="Right"/>
+                                <Label x:Name="homeLabel2" Content="" HorizontalAlignment="Left" HorizontalContentAlignment="Right" Margin="170,137,0,0" VerticalAlignment="Top" Width="142" FontSize="14"/>
+                                <Label x:Name="homeLabel3" Content="" HorizontalAlignment="Left" HorizontalContentAlignment="Right" Margin="170,212,0,0" VerticalAlignment="Top" Width="142" FontSize="14"/>
+                                <Label x:Name="homeLabel4" Content="" HorizontalAlignment="Left" HorizontalContentAlignment="Right" Margin="170,290,0,0" VerticalAlignment="Top" Width="142" FontSize="14"/>
+                            </Grid>
+                        </TabItem>
+                        <TabItem Header="Employees" Margin="21,10,-49,-10" Height="39" Focusable="True">
+                            <Grid Background="#FFF7F7F7" Margin="0,17,0,0" Focusable="True">
+                                <Button Content="Show online employees" HorizontalAlignment="Left" Margin="67,32,0,0" VerticalAlignment="Top" Width="140" Height="40" FontWeight="Bold" Click="showOnlineEmployees_Click"/>
+                                <TextBox x:Name="employeeTextBox" HorizontalAlignment="Left" Height="360" Margin="262,32,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="538" HorizontalScrollBarVisibility="Visible"/>
+                            </Grid>
+                        </TabItem>
+                        <TabItem Header="Companies" Margin="49,10,-72,-10" Height="39" Focusable="True">
+                            <Grid Background="#FFF7F7F7" Margin="0,17,0,0" Focusable="True">
+                                <Button Content="Show partner companies" HorizontalAlignment="Left" Margin="67,32,0,0" VerticalAlignment="Top" Width="147" Height="40" FontWeight="Bold" Click="showPartnerCompanies_Click"/>
+                                <TextBox x:Name="partnerCompaniesTextBox" HorizontalAlignment="Left" Height="360" Margin="262,32,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="538" HorizontalScrollBarVisibility="Visible"/>
+                            </Grid>
+                        </TabItem>
+                        <TabItem Header="Projects" Margin="0,10,-68,-10" HorizontalAlignment="Right" Width="70" Height="39" Focusable="True">
+                            <Grid Background="#FFF7F7F7" Margin="0,17,0,0" Focusable="True">
+                                <Button Content="Project Overview" HorizontalAlignment="Left" Margin="67,32,0,0" VerticalAlignment="Top" Width="105" Height="40" FontWeight="Bold" Click="projectOverview_Click"/>
+                                <TextBox x:Name="projectOverviewTextBox" HorizontalAlignment="Left" Height="360" Margin="262,32,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="538" HorizontalScrollBarVisibility="Visible"/>
+                            </Grid>
+                        </TabItem>
+                        <TabItem Header="Work" Margin="0,10,-68,-10" HorizontalAlignment="Right" Width="77" Height="39" Focusable="True">
+                            <Grid Background="#FFF7F7F7" Margin="0,17,0,1" Focusable="True">
+                            </Grid>
+                        </TabItem>
+                        <TabItem Margin="0,10,-240,-10" HorizontalAlignment="Right" Width="58" Height="39" Focusable="True">
+                            <Grid Background="#FFF7F7F7" Margin="0,17,0,-19" Focusable="True">
+                                <Grid Background="White" Margin="32,10,31,222">
+                                    <Label x:Name="editNameLabel" Content="Name: " HorizontalAlignment="Left" Height="28" Margin="10,52,0,0" VerticalAlignment="Top" Width="92"/>
+                                    <Label x:Name="editSurameLabel" Content="Surname: " HorizontalAlignment="Left" Height="28" Margin="10,85,0,0" VerticalAlignment="Top" Width="92"/>
+                                    <Label x:Name="editEmailLabel" Content="E-mail address: " HorizontalAlignment="Left" Height="28" Margin="10,118,0,0" VerticalAlignment="Top" Width="92"/>
+                                    <Label x:Name="editUsernameLabel" Content="Username: " HorizontalAlignment="Left" Height="28" Margin="10,151,0,0" VerticalAlignment="Top" Width="92"/>
+                                    <TextBox x:Name="textBoxEditName" IsEnabled="False" HorizontalAlignment="Left" Height="20" Margin="120,52,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="142"/>
+                                    <TextBox x:Name="textBoxEditSurname" IsEnabled="False" HorizontalAlignment="Left" Height="20" Margin="120,85,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="142"/>
+                                    <TextBox x:Name="textBoxEditEmail" IsEnabled="False" HorizontalAlignment="Left" Height="20" Margin="120,118,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="142"/>
+                                    <TextBox x:Name="textBoxEditUsername" IsEnabled="False" HorizontalAlignment="Left" Height="20" Margin="120,151,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="142"/>
+                                    <Button x:Name="buttonEditdata" Content="Edit data" HorizontalAlignment="Left" Margin="10,22,0,0" VerticalAlignment="Top" Width="135" Height="22" Click="editData_Click"/>
+                                </Grid>
+                                <Grid Background="White" Margin="32,199,31,156">
+                                    <Label x:Name="workingHours1" Content="Working hours:       From: " HorizontalAlignment="Left" Height="28" Margin="10,14,0,0" VerticalAlignment="Top" Width="153"/>
+                                    <Label x:Name="workingHours2" Content="To: " HorizontalAlignment="Left" Height="28" Margin="297,14,0,0" VerticalAlignment="Top" Width="153"/>
+                                    <Label x:Name="format" Content="Format: ..... " HorizontalAlignment="Left" Height="28" Margin="494,14,0,0" VerticalAlignment="Top" Width="153"/>
+                                    <TextBox x:Name="textBoxEditToTime" HorizontalAlignment="Left" Height="20" Margin="330,17,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="129"/>
+                                    <TextBox x:Name="textBoxEditFromTime" HorizontalAlignment="Left" Height="20" Margin="163,17,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="129"/>
+                                </Grid>
+                                <Grid Background="White" Margin="32,265,31,87">
+                                    <Button x:Name="editPassword" Content="Change password..." HorizontalAlignment="Left" Height="22" Margin="14,10,0,0" VerticalAlignment="Top" Width="132" Click="editPassword_Click"/>
+                                </Grid>
+                                <Grid Background="White" Margin="32,297,393,4">
+                                    <Label x:Name="oldPasswordLabel" IsEnabled="False" Content="Type in current password: " HorizontalAlignment="Left" Height="28" Margin="10,7,0,0" VerticalAlignment="Top" Width="157"/>
+                                    <Label x:Name="newPasswordLabel" IsEnabled="False" Content="Type in new password: " HorizontalAlignment="Left" Height="28" Margin="10,34,0,0" VerticalAlignment="Top" Width="138"/>
+                                    <Label x:Name="confirmNewPasswordLabel" IsEnabled="False" Content="Confirm new password: " HorizontalAlignment="Left" Height="28" Margin="10,61,0,0" VerticalAlignment="Top" Width="138"/>
+                                    <PasswordBox x:Name="passBoxOldPass" IsEnabled="False" HorizontalAlignment="Left" Height="20" Margin="163,10,0,0" VerticalAlignment="Top" Width="159"/>
+                                    <PasswordBox x:Name="passBoxNewPass" IsEnabled="False" HorizontalAlignment="Left" Height="20" Margin="163,37,0,0" VerticalAlignment="Top" Width="159"/>
+                                    <PasswordBox x:Name="passBoxConfirmNewPass" IsEnabled="False" HorizontalAlignment="Left" Height="20" Margin="163,63,0,0" VerticalAlignment="Top" Width="159"/>
+                                </Grid>
+                                <Grid Background="White" Margin="433,348,31,4">
+                                    <Button x:Name="saveChanges" Content="Save Changes" HorizontalAlignment="Left" Height="22" Margin="35,10,0,0" VerticalAlignment="Top" Width="100" Click="saveChanges_Click"/>
+                                    <Button x:Name="cancelChanges" Content="Cancel" HorizontalAlignment="Left" Height="22" Margin="181,10,0,0" VerticalAlignment="Top" Width="100" Click="cancel_Click"/>
+                                </Grid>
+                            </Grid>
+                            <TabItem.Header>
+                                <StackPanel>
+                                    <Image Name="img" Height="35" Width="35" Source="images/icon sett.png" />
+                                </StackPanel>
+                            </TabItem.Header>
+                        </TabItem>
+                        <!--TabItem Header="Settings" Margin="0,10,-240,-10" HorizontalAlignment="Right" Width="68" Height="39" Focusable="False">
+                            <Grid Background="#FFE5E5E5" Margin="0,17,0,1" Focusable="True">
+                                <Grid Background="White" Margin="32,10,31,222">
+                                    <Label x:Name="editNameLabel" Content="Name: " HorizontalAlignment="Left" Height="28" Margin="10,16,0,0" VerticalAlignment="Top" Width="92"/>
+                                    <Label x:Name="editSurameLabel" Content="Surname: " HorizontalAlignment="Left" Height="28" Margin="10,49,0,0" VerticalAlignment="Top" Width="92"/>
+                                    <Label x:Name="editEmailLabel" Content="E-mail address: " HorizontalAlignment="Left" Height="28" Margin="10,81,0,0" VerticalAlignment="Top" Width="92"/>
+                                    <Label x:Name="editUsernameLabel" Content="Username: " HorizontalAlignment="Left" Height="28" Margin="10,117,0,0" VerticalAlignment="Top" Width="92"/>
+                                    <TextBox x:Name="textBoxEditName" HorizontalAlignment="Left" Height="20" Margin="120,16,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="142"/>
+                                    <TextBox x:Name="textBoxEditSurname" HorizontalAlignment="Left" Height="20" Margin="120,49,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="142"/>
+                                    <TextBox x:Name="textBoxEditEmail" HorizontalAlignment="Left" Height="20" Margin="120,83,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="142"/>
+                                    <TextBox x:Name="textBoxEditUsername" HorizontalAlignment="Left" Height="20" Margin="120,117,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="142"/>
+                                </Grid>
+                                <Grid Background="White" Margin="32,186,31,156">
+                                    <Label x:Name="workingHours1" Content="Working hours:       From: " HorizontalAlignment="Left" Height="28" Margin="10,14,0,0" VerticalAlignment="Top" Width="153"/>
+                                    <Label x:Name="workingHours2" Content="To: " HorizontalAlignment="Left" Height="28" Margin="297,14,0,0" VerticalAlignment="Top" Width="153"/>
+                                    <Label x:Name="format" Content="Format: ..... " HorizontalAlignment="Left" Height="28" Margin="494,14,0,0" VerticalAlignment="Top" Width="153"/>
+                                    <TextBox x:Name="textBoxEditToTime" HorizontalAlignment="Left" Height="20" Margin="330,17,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="129"/>
+                                    <TextBox x:Name="textBoxEditFromTime" HorizontalAlignment="Left" Height="20" Margin="163,17,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="129"/>
+                                </Grid>
+                                <Grid Background="White" Margin="32,253,31,99">
+                                    <Button x:Name="editPassword" Content="Change password..." HorizontalAlignment="Left" Height="22" Margin="14,10,0,0" VerticalAlignment="Top" Width="132" Click="editPassword_Click"/>
+                                </Grid>
+                                <Grid Background="White" Margin="32,289,393,12">
+                                    <Label x:Name="oldPasswordLabel" IsEnabled="False" Content="Type in current password: " HorizontalAlignment="Left" Height="28" Margin="10,7,0,0" VerticalAlignment="Top" Width="157"/>
+                                    <Label x:Name="newPasswordLabel" IsEnabled="False" Content="Type in new password: " HorizontalAlignment="Left" Height="28" Margin="10,34,0,0" VerticalAlignment="Top" Width="138"/>
+                                    <Label x:Name="confirmNewPasswordLabel" IsEnabled="False" Content="Confirm new password: " HorizontalAlignment="Left" Height="28" Margin="10,61,0,0" VerticalAlignment="Top" Width="138"/>
+                                    <PasswordBox x:Name="passBoxOldPass" IsEnabled="False" HorizontalAlignment="Left" Height="20" Margin="163,10,0,0" VerticalAlignment="Top" Width="159"/>
+                                    <PasswordBox x:Name="passBoxNewPass" IsEnabled="False" HorizontalAlignment="Left" Height="20" Margin="163,37,0,0" VerticalAlignment="Top" Width="159"/>
+                                    <PasswordBox x:Name="passBoxConfirmNewPass" IsEnabled="False" HorizontalAlignment="Left" Height="20" Margin="163,63,0,0" VerticalAlignment="Top" Width="159"/>
+                                </Grid>
+                                <Grid Background="White" Margin="433,340,31,12">
+                                    <Button x:Name="saveChanges" Content="Save Changes" HorizontalAlignment="Left" Height="22" Margin="35,10,0,0" VerticalAlignment="Top" Width="100"/>
+                                    <Button x:Name="cancelChanges" Content="Cancel" HorizontalAlignment="Left" Height="22" Margin="181,10,0,0" VerticalAlignment="Top" Width="100"/>
+                                </Grid>
+                            </Grid-->
+                        <!-- TabItem.Header>
+                                <StackPanel>
+                                    <Image Name="img" Height="auto" Width="auto" Source="images/icon sett.png" />
+                                </StackPanel>
+                            </TabItem.Header-->
+                    </TabControl>
+                </Grid>
+            </TabItem>
+        </TabControl>
+        <Label x:Name="label1" Content="Hiring Company Employee" FontWeight="Bold" FontSize="32" HorizontalAlignment="Left" Height="53" Margin="198,21,0,0" VerticalAlignment="Top" Width="444" Foreground="#FF1F3270" Background="#FFEFFBFB"/>
+        <Label Content="© Miljana e333/ Zvezdana e335" HorizontalAlignment="Left" Margin="652,542,0,0" VerticalAlignment="Top" Width="180"/>
+
     </Grid>
 </Window>
