--- a/Moduo2/Client/MainWindow.xaml
+++ b/Moduo2/Client/MainWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="625" Width="870">
     <Grid>
-        <TabControl x:Name="tabControl" Background="White" HorizontalAlignment="Left" Height="571" Margin="7,2,0,0" VerticalAlignment="Top" Width="840">
+        <TabControl x:Name="tabControl" SelectedIndex="1" Background="White" HorizontalAlignment="Left" Height="571" Margin="7,2,0,0" VerticalAlignment="Top" Width="840">
             <TabItem Height="0">
                 <Grid>
                     <Label x:Name="usernameLabel" Content="Username:" Height="37" Width="137" Margin="251,221,446,303"/>
@@ -30,7 +30,7 @@
                         </TabItem>
                         <TabItem Header="Employees" Margin="49,10,-72,-10" Height="39" Focusable="True">
                             <Grid Background="#FFE5E5E5" Margin="0,17,0,0" Focusable="True">
-                                <DataGrid ItemsSource="{Binding Employees, Mode=TwoWay}" HorizontalAlignment="Left" Height="307" Margin="69,54,0,0" VerticalAlignment="Top" Width="650">
+                                <DataGrid ItemsSource="{Binding Employees, Mode=TwoWay}" SelectionMode="Single"  AutoGenerateColumns="False" HeadersVisibility="Column" IsReadOnly="True" CanUserAddRows="False" CanUserResizeColumns="False" CanUserReorderColumns="False" HorizontalAlignment="Left" Height="307" Margin="69,54,0,0" VerticalAlignment="Top" Width="650">
                                     <DataGrid.Columns>
                                         <DataGridTextColumn Header="Name" Binding="{Binding Name}"/>
                                         <DataGridTextColumn Header="Surname" Binding="{Binding Surname}"/>
@@ -38,6 +38,7 @@
                                         <DataGridTextColumn Header="e-mail" Binding="{Binding Email}"/>
                                     </DataGrid.Columns>
                                 </DataGrid>
+                                <Button Content="GetAllEmployees" HorizontalAlignment="Left" Height="28" Margin="259,17,0,0" VerticalAlignment="Top" Width="112" Click="Button_Click"/>
                             </Grid>
                         </TabItem>
                         <TabItem Header="Teams" Margin="0,10,-68,-10" HorizontalAlignment="Right" Width="70" Height="39" Focusable="True">
